--- a/src/styles/settings/base.scss
+++ b/src/styles/settings/base.scss
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: $font-primary;
   color: $color-dkGray;
   background-color: $color-white;
 }
