--- a/src/styles/settings/variables.scss
+++ b/src/styles/settings/variables.scss
@@ -1,5 +1,9 @@
 $color-white: #ffffff;
 $color-ltGray: #eeeeee;
+$color-medGray: #dddddd;
 $color-dkGray: #555555;
 $color-ltGreen: #aed145;
 $color-dkGreen: #47a347;
+
+$font-primary: 'Roboto', sans-serif;
+$font-secondary: 'Cormorant', serif;
