--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -1,5 +1,6 @@
 .navbar {
   background-color: $color-ltGray;
+  z-index: 100;
   .container {
     display: flex;
     justify-content: space-between;
@@ -15,6 +16,7 @@
       display: flex;
       align-items: center;
       height: 100%;
+      opacity: 0.8;
       .navbar__item {
         display: flex;
         align-items: center;
