--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,5 +5,6 @@
 @import "components/navbar";
 @import "components/home";
 @import "components/about";
+@import "components/packages";
 @import "components/blog";
 @import "components/contact";
