--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -12,7 +12,7 @@
       align-items: center;
       height: 100%;
     }
-    .navbar__nav {
+    .navbar__desktop {
       display: flex;
       align-items: center;
       height: 100%;
@@ -24,13 +24,56 @@
         font-family: $font-secondary;
         font-size: 2.3rem;
         font-weight: lighter;
-        padding: 0 2rem;
+        padding: 0 1rem;
         color: $color-dkGray;
         text-decoration: none;
         transition: all .5s ease;
+        border: 0.5rem solid transparent;
         &:hover {
           background-color: $color-medGray;
-          border-radius: 1rem;
+          border: 0.1rem solid $color-white;
+        }
+      }
+    }
+    .navbar__mobileBox {
+      .navbar__hamIcon,
+      .navbar__closeIcon {
+        font-size: 3rem;
+        cursor: pointer;
+        transition: .2s ease;
+        &:hover {
+          transform: scale(1.2);
+        }
+      }
+      .navbar__mobile {
+        position: fixed;
+        top: 8rem;
+        right: 0;
+        width: 27rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-size: 2rem;
+        z-index: 200;
+        background: $color-ltGray;
+        transition: .3s ease;
+        &.isHidden {
+          right: -27rem;
+        }
+        .navbar__item {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+          color: $color-dkGray;
+          text-decoration: none;
+          height: 4rem;
+          transition: .3s ease;
+          border: 0.5rem solid transparent;
+          &:hover {
+            background-color: $color-medGray;
+            border: 0.1rem solid $color-white;
+          }
         }
       }
     }
