mobile menu done

--- a/src/styles/settings/variables.scss
+++ b/src/styles/settings/variables.scss
@@ -8,3 +8,7 @@ $gradient-homepage: linear-gradient(180deg, rgba(248,248,248,1) 0%, rgba(248,248
 
 $font-primary: 'Roboto', sans-serif;
 $font-secondary: 'Cormorant', serif;
+
+$breakpoint-lg-screen: 1000px;
+$breakpoint-md-screen: 800px;
+$breakpoint-sm-screen: 600px;
