--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -7,6 +7,9 @@
     align-items: center;
     height: 8rem;
     padding: 0 3rem;
+    @include md-screen {
+      padding: 0 1rem;
+    }
     .navbar__logo {
       display: flex;
       align-items: center;
@@ -16,7 +19,6 @@
       display: flex;
       align-items: center;
       height: 100%;
-      opacity: 0.8;
       .navbar__item {
         display: flex;
         align-items: center;
@@ -29,6 +31,13 @@
         text-decoration: none;
         transition: all .5s ease;
         border: 0.5rem solid transparent;
+        @include lg-screen {
+          font-size: 2rem;
+        }
+        @include md-screen {
+          font-size: 1.8rem;
+          padding: 0 0.5rem;
+        }
         &:hover {
           background-color: $color-medGray;
           border: 0.1rem solid $color-white;
@@ -49,30 +58,51 @@
         position: fixed;
         top: 8rem;
         right: 0;
-        width: 27rem;
+        width: 30rem;
         display: flex;
         flex-direction: column;
-        align-items: center;
         font-size: 2rem;
         z-index: 200;
         background: $color-ltGray;
         transition: .3s ease;
         &.isHidden {
-          right: -27rem;
+          right: -24.5rem;
         }
         .navbar__item {
           display: flex;
-          justify-content: center;
           align-items: center;
           width: 100%;
+          height: 5rem;
           color: $color-dkGray;
           text-decoration: none;
-          height: 4rem;
           transition: .3s ease;
           border: 0.5rem solid transparent;
+          position: relative;
           &:hover {
-            background-color: $color-medGray;
             border: 0.1rem solid $color-white;
+            color: $color-white;
+          }
+          &:before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 0;
+            height: 100%;
+            transition: .2s;
+            z-index: -1;
+          }
+          &:hover:before {
+            width: 100%;
+            background-color: $color-dkGreen;
+          }
+          &:nth-of-type(even):hover:before {
+            background-color: $color-ltGreen;
+          }
+          .navbar__icon {
+            font-size: 3rem;
+            margin-left: 1rem;
+            margin-right: 1.3rem;
           }
         }
       }
