--- a/src/styles/components/packages.scss
+++ b/src/styles/components/packages.scss
@@ -1,1 +1,13 @@
-.packages {}
+.packages {
+  height: calc(100vh - 8rem);
+  width: 100vw;
+  position: relative;
+  overflow: hidden;
+  img {
+    position: absolute;
+    top: -8rem;
+    left: 0;
+    min-width: 100%;
+    min-height: 100%;
+  }
+}
