packages in progress

--- a/src/styles/components/home.scss
+++ b/src/styles/components/home.scss
@@ -4,6 +4,7 @@
   position: relative;
   overflow: hidden;
   background: $gradient-homepage;
+  margin-top: 7rem;
   .home__bg-1 {
     position: absolute;
     top: -6rem;
