--- a/src/styles/settings/variables.scss
+++ b/src/styles/settings/variables.scss
@@ -4,6 +4,9 @@ $color-medGray: #dddddd;
 $color-dkGray: #555555;
 $color-ltGreen: #aed145;
 $color-dkGreen: #47a347;
+$color-packagesRed: #DC765F;
+$color-packagesYellow: #ECB35C;
+$color-packagesGreen: #5A6847;
 $gradient-homepage: linear-gradient(180deg, rgba(248,248,248,1) 0%, rgba(248,248,248,1) 50%, rgba(251,251,251,1) 100%);
 
 $font-primary: 'Roboto', sans-serif;
