--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -1,11 +1,11 @@
 .navbar {
-  position: fixed;
-  top: 0;
-  left: 0;
+  //position: fixed;
+  //top: 0;
+  //left: 0;
   width: 100%;
   background-color: $color-ltGray;
-  z-index: 100;
-  opacity: 0.9;
+  //z-index: 100;
+  //opacity: 0.9;
   .container {
     display: flex;
     justify-content: space-between;
